[Ulhaq] Fix layout not responsive

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
+  margin-bottom: 16px;
 }
 
 .container {
@@ -33,4 +34,8 @@
 
 .my-body {
   background-color: coral;
+}
+
+.basic-info {
+  margin-left: 16px;
 }
